--- a/CRM/test-output/old/Default suite/methods.html
+++ b/CRM/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="918ec4">  <td>20/02/11 14:17:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UserHome.login()[pri:0, instance:ToTest.UserHome@646d64ab]">&gt;&gt;login</td> 
+<tr bgcolor="918ec4">  <td>20/02/15 22:05:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCRMLead.getDriver()[pri:0, instance:ToTest.TestCRMLead@646d64ab]">&gt;&gt;getDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@243745864</td>   <td></td> </tr>
-<tr bgcolor="918ec4">  <td>20/02/11 14:17:31</td>   <td>20969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserHome.UserHomePageTest()[pri:0, instance:ToTest.UserHome@646d64ab]">UserHomePageTest</td> 
+<tr bgcolor="918ec4">  <td>20/02/15 22:05:27</td>   <td>18923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCRMLead.ClickOnLeadsTab()[pri:0, instance:ToTest.TestCRMLead@646d64ab]">ClickOnLeadsTab</td> 
+  <td>main@243745864</td>   <td></td> </tr>
+<tr bgcolor="918ec4">  <td>20/02/15 22:06:27</td>   <td>79090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCRMLead.ClickOnAddNewLead()[pri:1, instance:ToTest.TestCRMLead@646d64ab]">ClickOnAddNewLead</td> 
+  <td>main@243745864</td>   <td></td> </tr>
+<tr bgcolor="918ec4">  <td>20/02/15 22:06:44</td>   <td>95951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCRMLead.ADDLEAD()[pri:2, instance:ToTest.TestCRMLead@646d64ab]">ADDLEAD</td> 
   <td>main@243745864</td>   <td></td> </tr>
 </table>
